fixed mobile element alignments

--- a/src/components/Learning/learningmobile.css
+++ b/src/components/Learning/learningmobile.css
@@ -3,8 +3,13 @@
   /* width: 90%; */
 }
 
-.learning-holder-mobile h1,
-h3 {
+.learning-holder-mobile > h1 {
+  width: 90%;
+  margin: 20px auto;
+  text-align: center;
+}
+
+.learning-sub-holder-mobile h3 {
   width: 90%;
   margin: 20px auto;
   text-align: center;
